# Parallelizm_NSU

./: file.txt
task1/: CMakeLists.txt  Makefile  README.md  main.cpp
task2/: CMakeLists.txt  ex3_1.cpp  ex3_2.cpp  main.cpp  result1.txt
